<resources>
    <string name="app_name" translatable="false">Fun Quiz</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="passwordConfirm">Retype password</string>
    <string name="username">Username</string>
    <string name="quiz_name">Name:</string>
    <string name="quiz_question_count">Question count:</string>
    <string name="add">Add</string>
    <string name="combiner" translatable="false">%s %s</string>
    <string name="save">Save</string>
    <string name="pass_the_test">Pass the test</string>
    <string name="add_question">Add question</string>
    <string name="question_name">Question name:</string>
    <string name="right_answers">Right answers:</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="quiz_remove">Remove quiz</string>
    <string name="quiz_remove_message">Are you sure you want to remove the quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="quiz_result">Quiz result: %s</string>
    <string name="quiz_right_answers">Right answers: %1$s of %2$s</string>
    <string name="quiz_finish">Finish</string>
    <string name="quiz_name_empty">The name should not be empty!</string>
    <string name="quiz_empty_questions">No enough questions!</string>
    <string name="question_name_empty">The question name should not be empty!</string>
    <string name="question_answer_empty">The answers should not be empty!</string>
    <string name="wrong_answers">Wrong answers:</string>
    <string name="quiz_title_answers">Right answers: %1$s\nWrong answers: %2$s</string>
    <string name="remove_question">Are you sure you want to remove the question?</string>
    <string name="enter_email">Please enter email!</string>
    <string name="enter_valid_email">Please enter valid email!</string>
    <string name="enter_password">Please enter password!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="all_fields_invalid">All fields invalid!</string>
    <string name="password_requirements_is_not_initialized">Password requirements is not initialized!</string>
    <string name="username_can_t_be_empty">Username can\'t be empty!</string>
    <string name="username_must_be_at_least_4_characters">Username must be at least 4 characters</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit!</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter!</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter!</string>
    <string name="password_must_contain_at_least_one_special_character">Password must contain at least one special character!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="password_must_be_at_least_s_characters_long">Password must be at least %s characters long!</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="welcome">Welcome, %s!</string>
    <string name="add_question_title">Adding question</string>
    <string name="add_quiz_title">Adding quiz</string>
    <string name="update_quiz_title">Updating quiz</string>
    <string name="public_access">Public access</string>
    <string name="quiz_title_my_own">My own</string>
    <string name="quiz_title_public">Public</string>
    <string name="server_is_not_available">Server is not available!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="edit">Edit</string>
    <string name="quiz_title_moderation">Moderation</string>
    <string name="quiz_moderation_check">Check answers</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="users_title">Users</string>
    <string name="quiz_title">Quiz</string>
    <string name="questions">Questions</string>
    <string name="update_quiz_question">Updating question</string>
    <string name="search_title">Search</string>
    <string name="export">Export</string>
    <string name="export_no_data">No data to export</string>
    <string name="export_success">The export was successful</string>
    <string name="are_you_sure_leave_quiz_edit">Do you really want to quit without saving changes?</string>
    <string name="are_you_sure_leave_test">Do you really want to get out of the test? The answers will be lost.</string>
</resources>