<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewQuiz"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/quiz_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewName"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/quiz_question_count"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imageButtonRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textViewName"
            android:layout_alignEnd="@+id/buttonTest"
            android:layout_alignBottom="@+id/textViewCount"
            android:background="@android:color/transparent"
            android:contentDescription="@string/remove"
            android:src="@drawable/round_delete" />

        <Button
            android:id="@+id/buttonTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewCount"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pass_the_test" />

        <Button
            android:id="@+id/buttonCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonTest"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/quiz_moderation_check" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
