<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_dashboard_graph"
    app:startDestination="@id/quizzesDashboardFragment">
    <fragment
        android:id="@+id/quizzesDashboardFragment"
        android:name="com.github.elxreno.funquiz_client.ui.quiz.fragment.QuizDashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_quiz_dashboard" >
        <action
            android:id="@+id/action_quizzesDashboardFragment_to_quizFragment"
            app:destination="@id/quizFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/usersFragment"
        android:name="com.github.elxreno.funquiz_client.ui.users.UsersFragment"
        android:label="@string/users_title"
        tools:layout="@layout/fragment_users" />
    <fragment
        android:id="@+id/quizFragment"
        android:name="com.github.elxreno.funquiz_client.ui.quiz.fragment.QuizFragment"
        android:label="@string/quiz_title"
        tools:layout="@layout/fragment_quiz" >
        <argument
            android:name="quizId"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="canEdit"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="canSeeQuestions"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
</navigation>